Remove `indent_size` parameter from `Buffer::edit_with_autoindent`
Instead, compute the indent size by reading the settings inside that method.

Co-authored-by: Mikayla Maki <mikayla.c.maki@gmail.com>

--- a/crates/language/Cargo.toml
+++ b/crates/language/Cargo.toml
@@ -27,6 +27,7 @@ fuzzy = { path = "../fuzzy" }
 gpui = { path = "../gpui" }
 lsp = { path = "../lsp" }
 rpc = { path = "../rpc" }
+settings = { path = "../settings" }
 sum_tree = { path = "../sum_tree" }
 text = { path = "../text" }
 theme = { path = "../theme" }
