Start painting some sort of hunk info, it's wrong but it's close
Co-Authored-By: Max Brunsfeld <max@zed.dev>

--- a/crates/language/Cargo.toml
+++ b/crates/language/Cargo.toml
@@ -51,6 +51,7 @@ smol = "1.2"
 tree-sitter = "0.20"
 tree-sitter-rust = { version = "*", optional = true }
 tree-sitter-typescript = { version = "*", optional = true }
+git2 = "0.15"
 
 [dev-dependencies]
 client = { path = "../client", features = ["test-support"] }
