Restructure autoclosing to account for multi-language documents

--- a/crates/zed/src/languages/html/config.toml
+++ b/crates/zed/src/languages/html/config.toml
@@ -1,6 +1,6 @@
 name = "HTML"
 path_suffixes = ["html"]
-autoclose_before = ">"
+autoclose_before = ">})"
 brackets = [
     { start = "<", end = ">", close = true, newline = true },
     { start = "{", end = "}", close = true, newline = true },
