--- a/crates/zed/src/languages/html/config.toml
+++ b/crates/zed/src/languages/html/config.toml
@@ -8,3 +8,5 @@ brackets = [
     { start = "\"", end = "\"", close = true, newline = false },
     { start = "!--", end = " --", close = true, newline = false },
 ]
+
+block_comment = ["<!-- ", " -->"]
