Add basic support for ruby
Co-authored-by: Kay Simmons <kay@zed.dev>

--- a/crates/language/Cargo.toml
+++ b/crates/language/Cargo.toml
@@ -71,4 +71,5 @@ tree-sitter-json = "*"
 tree-sitter-rust = "*"
 tree-sitter-python = "*"
 tree-sitter-typescript = "*"
+tree-sitter-ruby = "*"
 unindent = "0.1.7"
