Start work on handling combined injections in SyntaxMap

--- a/crates/language/Cargo.toml
+++ b/crates/language/Cargo.toml
@@ -72,4 +72,5 @@ tree-sitter-rust = "*"
 tree-sitter-python = "*"
 tree-sitter-typescript = "*"
 tree-sitter-ruby = "*"
+tree-sitter-embedded-template = "*"
 unindent = "0.1.7"
