--- a/crates/zed/src/languages/racket/config.toml
+++ b/crates/zed/src/languages/racket/config.toml
@@ -3,7 +3,7 @@ path_suffixes = ["rkt"]
 line_comment = "; "
 autoclose_before = "])"
 brackets = [
-    { start = "[", end = "]", close = true, newline = true },
-    { start = "(", end = ")", close = true, newline = true },
-    { start = "'", end = "'", close = false, newline = false },
+    { start = "[", end = "]", close = true, newline = false },
+    { start = "(", end = ")", close = true, newline = false },
+    { start = "\"", end = "\"", close = true, newline = false },
 ]
