--- a/crates/zed/src/languages/scheme/config.toml
+++ b/crates/zed/src/languages/scheme/config.toml
@@ -1,9 +1,9 @@
 name = "Scheme"
-path_suffixes = ["scm", "ss", "mjs"]
+path_suffixes = ["scm", "ss"]
 line_comment = "; "
 autoclose_before = "])"
 brackets = [
-    { start = "[", end = "]", close = true, newline = true },
-    { start = "(", end = ")", close = true, newline = true },
-    { start = "'", end = "'", close = false, newline = false },
+    { start = "[", end = "]", close = true, newline = false },
+    { start = "(", end = ")", close = true, newline = false },
+    { start = "\"", end = "\"", close = true, newline = false },
 ]
